gitops/espresso/infrastructure/configs/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    gateway-access: public
    pod-security.kubernetes.io/enforce: restricted
