gitops/espresso/infrastructure/configs/gateway/macchiato-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: macchiato
  namespace: gateway
spec:
  clusterIP: None
  ports:
    - name: ssh
      port: 2286
      targetPort: 2286
---
apiVersion: v1
kind: Endpoints
metadata:
  name: macchiato
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.186.1
    ports:
      - name: ssh
        port: 2286
