gitops/espresso/infrastructure/configs/gateway/homebridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: gateway
spec:
  ports:
    - port: 8581
      targetPort: 8581
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homebridge
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.187.1
    ports:
      - port: 8581
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - homebridge.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: homebridge
          port: 8581
