gitops/espresso/infrastructure/configs/gateway/internal-redirects.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
