gitops/espresso/infrastructure/configs/gateway/unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: gateway
spec:
  ports:
    - port: 8444
      targetPort: 8444
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.187.1
    ports:
      - port: 8444
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - unifi.gullhaugveien.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: unifi
          port: 8444
