gitops/espresso/infrastructure/configs/gateway/zigbee2mqtt.yaml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: gateway
spec:
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zigbee2mqtt
  namespace: gateway
subsets:
  - addresses:
      - ip: 10.0.187.1
    ports:
      - port: 8082
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  namespace: gateway
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - zigbee.asgard.michaelbrusegard.com
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 8082
